# kektordb

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  LICENSE  Makefile  PROTOCOL.md  README.it.md  README.md  cognitive.yaml  cognitive_layers_example.yaml  go.mod  go.sum  kektordb.aof  kektordb.kdb  proxy.yaml  test-app-results.json  test-plan-results.json  vectorizers.yaml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
clients/python/: .gitignore  README.md  benchmark.py  benchmark2.py  benchmark_glove.py  benchmark_glove_batch.py  benchmark_glove_batch_cosine_int8.py  benchmark_sift_euclidean_float16.py  benchmark_sift_euclidean_float32.py  consistency_test.py  e2e_test.py  example.py  load_test.py  setup.py  stress_test_recall.py  test_auto_linking.py  test_cache_lifecycle.py  test_compiler_e2e.py  test_contracts.py  test_firewall.py  test_graph_rag.py  test_langchain_wrapper.py  test_lazy_vs_eager.py  test_proxy_yaml.py  test_rag_chat.py  test_refine_improvement.py  test_vacuum_stability.py
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
cmd/kektordb/: README.md  main.go
cmd/test_autolink/: main.go
docs/design/: 001-hybrid-storage-architecture-rfc.md  (+1 more)
native/compute/: Cargo.toml  README.md
native/compute/include/: kektordb_compute.h
native/compute/src/: embedder.rs  lib.rs
native/compute/tests/: embed_smoke.rs
testdata/: api_contracts.json
(+320 files in other folders)
