[package]
name = "compute"
version = "0.1.0"
edition = "2024"

[lib]
name = "kektordb_compute"   # Nome del file della libreria finale
crate-type = ["staticlib"] # Compila come .a

[dependencies]
mem = "0.5.0"
transmute = "0.1.1"
half = "2.1.0"

[profile.release]  # Aggiungi questa sezione
panic = "abort"    # Cambia da unwind (default) a abort
